--- a/aist_bringup/config/robotiq_85_controller.yaml
+++ b/aist_bringup/config/robotiq_85_controller.yaml
@@ -1,4 +1,4 @@
-$(arg prefix)robotiq_85_controller:
+$(arg prefix)gripper_controller:
   type: position_controllers/GripperActionController
   action_ns: gripper_action_controller              # for moveit
   action_type: CModelCommand         # for moveit (==>type)
