--- a/aist_routines/config/aist_config.yaml
+++ b/aist_routines/config/aist_config.yaml
@@ -13,7 +13,7 @@ grippers:
     type: RobotiqGripper
     args:
       prefix: a_bot_
-      product: "85"
+      product: robotiq_85
       force: 5.0
       velocity: 0.1
       timeout: 6.0
