--- a/aist_routines/config/mocap_config.yaml
+++ b/aist_routines/config/mocap_config.yaml
@@ -3,7 +3,7 @@ grippers:
     type: RobotiqGripper
     args:
       prefix: c_bot_
-      product: "85"
+      product: robotiq_85
       force: 5.0
       velocity: 0.1
       timeout: 6.0
