--- a/aist_handeye_calibration/config/aist/a_bot_outside_camera.yaml
+++ b/aist_handeye_calibration/config/aist/a_bot_outside_camera.yaml
@@ -3,6 +3,7 @@ robot_name: a_bot
 eye_on_hand: true
 robot_base_frame: workspace_center
 robot_effector_frame: a_bot_ee_link
+camera_frame: a_bot_outside_camera_color_optical_frame_calibrated
 initpose: [0.00, -0.20, 0.35, -90, 90, 0]
 keyposes:
   - [-0.15, -0.10, 0.40, -90,  60,  0]
@@ -14,3 +15,6 @@ keyposes:
   - [-0.05, -0.12, 0.40,   0,  80, 90]
   - [-0.05,  0.00, 0.40,   0, 100, 90]
   - [-0.05,  0.08, 0.40,   0, 110, 90]
+
+camera_body_frame: a_bot_outside_camera_link
+camera_optical_frame: a_bot_outside_camera_color_optical_frame
