--- a/aist_handeye_calibration/config/aist/a_phoxi_m_camera.yaml
+++ b/aist_handeye_calibration/config/aist/a_phoxi_m_camera.yaml
@@ -4,6 +4,9 @@ eye_on_hand: false
 robot_base_frame: workspace_center
 robot_effector_frame: b_bot_ee_link
 camera_frame: a_phoxi_m_camera_calibrated
+marker_id: 26
+marker_size: 0.07
+planarity_tolerance: 0.001
 initpose: [0.10,  0.10, 0.35, 0, 90, 0]
 keyposes:
   - [0.20,  0.10, 0.16, 30, 25, 0]
@@ -21,3 +24,6 @@ keyposes:
   - [0.00, -0.15, 0.16, 30, 25, 0]
   - [0.00,  0.00, 0.16, 30, 25, 0]
   - [0.00,  0.15, 0.16, 30, 25, 0]
+
+camera_body_frame: a_phoxi_m_camera
+camera_optical_frame: a_phoxi_m_camera_sensor
