--- a/aist_handeye_calibration/config/aist/a_bot_inside_camera.yaml
+++ b/aist_handeye_calibration/config/aist/a_bot_inside_camera.yaml
@@ -4,17 +4,20 @@ eye_on_hand: true
 robot_base_frame: workspace_center
 robot_effector_frame: a_bot_ee_link
 camera_frame: a_bot_inside_camera_color_optical_frame_calibrated
-initpose: [0.00, -0.20, 0.35, -90, 90, 0]
+marker_id: 32
+marker_size: 0.16
+planarity_tolerance: 0.003
+initpose: [0.00, -0.20, 0.50, -90, 90, 0]
 keyposes:
-  - [-0.15, -0.10, 0.40, -90,  60,  0]
-  - [-0.10, -0.08, 0.40, -90,  75,  0]
-  - [-0.05, -0.08, 0.40, -90,  90,  0]
-  - [-0.00, -0.06, 0.40, -90, 100,  0]
-  - [ 0.05, -0.04, 0.40, -90, 110,  0]
-  - [-0.05, -0.20, 0.40,   0,  70, 90]
-  - [-0.05, -0.12, 0.40,   0,  80, 90]
-  - [-0.05,  0.00, 0.40,   0, 100, 90]
-  - [-0.05,  0.08, 0.40,   0, 110, 90]
+  - [-0.25,  0.05, 0.50, -90,  60,  0]
+  - [-0.15,  0.05, 0.50, -90,  75,  0]
+  - [ 0.00,  0.05, 0.50, -90,  90,  0]
+  - [ 0.15,  0.05, 0.50, -90, 105,  0]
+  - [ 0.25,  0.05, 0.50, -90, 120,  0]
+  - [ 0.00, -0.20, 0.50,   0,  60, 90]
+  - [ 0.00, -0.05, 0.50,   0,  75, 90]
+  - [ 0.00,  0.15, 0.50,   0, 100, 90]
+  - [ 0.00,  0.20, 0.50,   0, 105, 90]
 
 camera_body_frame: a_bot_inside_camera_link
 camera_optical_frame: a_bot_inside_camera_color_optical_frame
