--- a/aist_localization/CMakeLists.txt
+++ b/aist_localization/CMakeLists.txt
@@ -16,13 +16,16 @@ find_package(
   catkin REQUIRED
   COMPONENTS
     roscpp
+    rospy
     roslib
     genmsg
     message_generation
     actionlib_msgs
     actionlib
-    geometry_msgs
     std_msgs
+    sensor_msgs
+    geometry_msgs
+    ddynamic_reconfigure
     tf
     aist_depth_filter
 )
@@ -37,7 +40,7 @@ include_directories(
   ${PHOLOCALIZATION_INCLUDE_DIRS}
 )
 
-add_action_files(DIRECTORY action)
+add_action_files(FILES Localize.action)
 
 generate_messages(
   DEPENDENCIES
@@ -51,6 +54,7 @@ catkin_package(
   CATKIN_DEPENDS
     roscpp
     message_runtime
+    sensor_msgs
     pluginlib
     nodelet
 )
