--- a/aist_camera_multiplexer/package.xml
+++ b/aist_camera_multiplexer/package.xml
@@ -12,9 +12,9 @@
   <exec_depend>pluginlib</exec_depend>exec_depend>
   <build_depend>nodelet</build_depend>build_depend>
   <exec_depend>nodelet</exec_depend>exec_depend>
-  <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <depend>ddynamic_reconfigure</depend>
   <depend>sensor_msgs</depend>
   <depend>image_transport</depend>
 
