Confirmed skhi, dkhi, diiwa and ceatec configurations work

--- a/dkhi_moveit_config/config/fake_controllers.yaml
+++ b/dkhi_moveit_config/config/fake_controllers.yaml
@@ -15,3 +15,8 @@ controller_list:
       - b_khi_joint4
       - b_khi_joint5
       - b_khi_joint6
+initial:  # Define initial robot poses.
+  - group: a_khi
+    pose: standing
+  - group: b_khi
+    pose: standing
