--- a/skhi_moveit_config/config/ompl_planning.yaml
+++ b/skhi_moveit_config/config/ompl_planning.yaml
@@ -148,3 +148,29 @@ a_khi:
     - SPARStwo
   projection_evaluator: joints(a_khi_joint1,a_khi_joint2)
   longest_valid_segment_fraction: 0.005
+a_khi_gripper:
+  default_planner_config: None
+  planner_configs:
+    - SBL
+    - EST
+    - LBKPIECE
+    - BKPIECE
+    - KPIECE
+    - RRT
+    - RRTConnect
+    - RRTstar
+    - TRRT
+    - PRM
+    - PRMstar
+    - FMT
+    - BFMT
+    - PDST
+    - STRIDE
+    - BiTRRT
+    - LBTRRT
+    - BiEST
+    - ProjEST
+    - LazyPRM
+    - LazyPRMstar
+    - SPARS
+    - SPARStwo
