--- a/aist_bringup/config/robotiq_hande_controller.yaml
+++ b/aist_bringup/config/robotiq_hande_controller.yaml
@@ -1,4 +1,4 @@
-$(arg prefix)gripper_controller:
+$(arg prefix)robotiq_hande_controller:
   type: position_controllers/JointTrajectoryController
   joints:
     - $(arg prefix)robotiq_hande_joint_finger
