--- a/fvision_moveit_config/config/ros_controllers.yaml
+++ b/fvision_moveit_config/config/ros_controllers.yaml
@@ -15,7 +15,6 @@ hardware_interface:
     - d_bot_wrist_1_joint
     - d_bot_wrist_2_joint
     - d_bot_wrist_3_joint
-    - d_bot_robotiq_85_left_knuckle_joint
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
@@ -23,4 +22,14 @@ joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: 50
 controller_list:
-  []
+  - name: /d_bot_scaled_pos_joint_traj_controller
+    action_ns: follow_joint_trajectory
+    default: True
+    type: FollowJointTrajectory
+    joints:
+      - d_bot_shoulder_pan_joint
+      - d_bot_shoulder_lift_joint
+      - d_bot_elbow_joint
+      - d_bot_wrist_1_joint
+      - d_bot_wrist_2_joint
+      - d_bot_wrist_3_joint
