command send to ur_modern_driver's topic

--- a/aist_robot_controllers/aist_robotiq2f85_controller/CMakeLists.txt
+++ b/aist_robot_controllers/aist_robotiq2f85_controller/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin
     robot_controllers
     robot_controllers_interface
     robotiq_msgs
+    ur_modern_driver
 )
 
 include_directories(
