--- a/aist_robot_controllers/aist_robotiq2f85_controller/package.xml
+++ b/aist_robot_controllers/aist_robotiq2f85_controller/package.xml
@@ -16,6 +16,7 @@
   <depend>robot_controllers</depend>
   <depend>robot_controllers_interface</depend>
   <depend>robotiq_msgs</depend>
+  <depend>ur_modern_driver</depend>
 
   <exec_depend>actionlib</exec_depend>
   <exec_depend>control_msgs</exec_depend>
