Add support for multi-gripper configurations

--- a/aist_routines/config/aist_config.yaml
+++ b/aist_routines/config/aist_config.yaml
@@ -1,15 +1,11 @@
-grippers:
+robots:
   a_bot:
-#    type: GenericGripper
-#    args:
-#      name: a_bot_robotiq_85_gripper
-#      action_ns: /a_bot_robotiq_85_controller/gripper_cmd
-#      base_link: a_bot_robotiq_85_base_link
-#      tip_link: a_bot_robotiq_85_tip_link
-#      timeout: 10.0
-#      min_gap: 0.0
-#      max_gap: 1.0
-#      max_effort: 5.0
+    default_gripper: a_bot_robotiq_85_gripper
+  b_bot:
+    default_gripper: b_bot_single_suction_gripper
+    
+grippers:
+  a_bot_robotiq_85_gripper:
     type: RobotiqGripper
     args:
       prefix: a_bot_
@@ -17,7 +13,7 @@ grippers:
       force: 5.0
       velocity: 0.1
       timeout: 6.0
-  b_bot:
+  b_bot_single_suction_gripper:
     type: SuctionGripper
     args:
       name: b_bot_single_suction_gripper
