Confirmed that multi-gripper works

--- a/aist_routines/config/ceatec_config.yaml
+++ b/aist_routines/config/ceatec_config.yaml
@@ -1,8 +1,11 @@
-grippers:
+robots:
   arm:
+    default_gripper: gripper
+
+grippers:
+  gripper:
     type: GenericGripper
     args:
-      name: gripper
       action_ns: gripper_controller/gripper_action
       base_link: wrist_roll_link
       tip_link: gripper_link
