--- a/aist_routines/config/fetch_config.yaml
+++ b/aist_routines/config/fetch_config.yaml
@@ -1,5 +1,9 @@
-grippers:
+robots:
   arm:
+    default_gripper: gripper
+
+grippers:
+  gripper:
     type: GenericGripper
     args:
       name: gripper
