--- a/aist_routines/config/pgrp_config.yaml
+++ b/aist_routines/config/pgrp_config.yaml
@@ -1,10 +1,16 @@
-grippers:
+robots:
   a_bot:
+    default_gripper: a_bot_gripper
+  a_bot:
+    default_gripper: b_bot_single_suction_gripper
+
+grippers:
+  a_bot_gripper:
     type: PrecisionGripper
     args:
       prefix: a_bot_
       timeout: 3.0
-  b_bot:
+  b_bot_single_suction_gripper:
     type: SuctionGripper
     args:
       name: b_bot_single_suction_gripper
