--- a/aist_routines/config/skhi_config.yaml
+++ b/aist_routines/config/skhi_config.yaml
@@ -1,12 +1,21 @@
-grippers:
+robots:
   a_khi:
+    default_gripper: a_khi_magnet
+
+grippers:
+  a_khi_magnet:
     type: SuctionGripper
     args:
-      name: magnet_gripper
-      base_link: a_khi_gripper_magnet_base_link
-      tip_link: a_khi_gripper_magnet_link
+      name: a_khi_magnet
+      base_link: a_khi_magnet_base_link
+      tip_link: a_khi_magnet_link
       eject: false
       timeout: 2.0
+  a_khi_gripper:
+    type: Lecp6Gripper
+    args:
+      prefix: a_khi_
+      timeout: 3.0
 
-#cameras:
-#  phoxi_m_camera: PhoXiCamera
+cameras:
+  a_khi_camera: PhoXiCamera
