--- a/aist_routines/config/storobo_config.yaml
+++ b/aist_routines/config/storobo_config.yaml
@@ -1,5 +1,9 @@
-grippers:
+robots:
   b_torobo:
+    default_gripper: b_torobo_gripper
+
+grippers:
+  b_torobo_gripper:
     type: VoidGripper
     args:
       name: b_torobo_gripper
