--- a/aist_routines/config/ur5e_config.yaml
+++ b/aist_routines/config/ur5e_config.yaml
@@ -1,5 +1,11 @@
-grippers:
+robots:
   c_bot:
+    default_gripper: c_bot_robotiq_85_gripper
+  d_bot:
+    default_gripper: d_bot_robotiq_85_gripper
+
+grippers:
+  c_bot_robotiq_85_gripper:
     type: RobotiqGripper
     args:
       prefix: c_bot_
@@ -7,7 +13,7 @@ grippers:
       force: 5.0
       velocity: 0.1
       timeout: 6.0
-  d_bot:
+  d_bot_robotiq_85_gripper:
     type: RobotiqGripper
     args:
       prefix: d_bot_
