--- a/aist_routines/config/aist_config.yaml
+++ b/aist_routines/config/aist_config.yaml
@@ -1,18 +1,18 @@
 robots:
-  a_bot:
-    default_gripper: a_bot_robotiq_85_gripper
+#  a_bot:
+#    default_gripper: a_bot_robotiq_85_gripper
   b_bot:
     default_gripper: b_bot_single_suction_gripper
     
 grippers:
-  a_bot_robotiq_85_gripper:
-    type: RobotiqGripper
-    args:
-      prefix: a_bot_
-      product: robotiq_85
-      force: 5.0
-      velocity: 0.1
-      timeout: 6.0
+#  a_bot_robotiq_85_gripper:
+#    type: RobotiqGripper
+#    args:
+#      prefix: a_bot_
+#      product: robotiq_85
+#      force: 5.0
+#      velocity: 0.1
+#      timeout: 6.0
   b_bot_single_suction_gripper:
     type: SuctionGripper
     args:
@@ -24,5 +24,5 @@ grippers:
 
 cameras:
   a_phoxi_m_camera: PhoXiCamera
-  a_bot_inside_camera: RealSenseCamera
-  a_bot_outside_camera: RealSenseCamera
+#  a_bot_inside_camera: RealSenseCamera
+#  a_bot_outside_camera: RealSenseCamera
