Make toyota1_config comformant to multi-gripper

--- a/aist_routines/config/toyota1_config.yaml
+++ b/aist_routines/config/toyota1_config.yaml
@@ -1,18 +1,21 @@
-#grippers:
-#  arm:
-#    type: GenericGripper
-#    args:
-#      name: two_finger_gripper
-#      action_ns: gripper_controller/gripper_action
-#      base_link: gripper_base_link
-#      tip_link: gripper_link
-#      timeout: 10.0
-#      min_gap: 0.03
-#      max_gap: 0.06
-#      max_effort: 210.0
+arms:
+  arm:
+    default_gripper: gripper
+
+grippers:
+  magnet:
+    type: MagswitchGripper
+    args:
+      prefix: ''
+      timeout: 2.0
+  gripper:
+    type: Lecp6Gripper
+    args:
+      prefix: ''
+      timeout: 10.0
 
 cameras:
   camera: PhoXiCamera
 
-moveit_pose_reference_frame: basement_link
+moveit_pose_reference_frame: base_link
 moveit_eef_step: 0.05
