--- a/aist_routines/config/kitting.yaml
+++ b/aist_routines/config/kitting.yaml
@@ -1,25 +1,25 @@
 bin_props:
-  _1:
+  bin_1:
     name: bin_1_part_5
-    part_id: 5
-  _2:
+    part_id: 05_MBRFA30-2-P6
+  bin_2:
     name: bin_1_part_16
-    part_id: 16
-  _3:
+    part_id: 16_SPWF6
+  bin_3:
     name: bin_1_part_17
-    part_id: 17
-  _4:
+    part_id: 17_SCB4-10
+  bin_4:
     name: bin_2_part_4
-    part_id: 4
-  _5:
+    part_id: 04_37D-GEARMOTOR-50-70
+  bin_5:
     name: bin_2_part_7
-    part_id: 7
-  _6:
+    part_id: 07_SBARB6200ZZ_30
+  bin_6:
     name: bin_2_part_8
-    part_id: 8
+    part_id: 08_KZAF1075NA4WA55GA20AA0
 
 part_props:
-  _4:
+  04_37D-GEARMOTOR-50-70:
     name: Geared motor
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -29,7 +29,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.06]
     speed_slow: 0.1
     use_normals: true
-  _5:
+  05_MBRFA30-2-P6:
     name: Pully for round belt
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -39,7 +39,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.03]
     speed_slow: 1.0
     use_normals: true
-  _6:
+  06_MBT4-400:
     name: Polyurethane round belt
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -49,7 +49,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _7:
+  07_SBARB6200ZZ_30:
     name: Bearing with housing
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -59,7 +59,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 0.1
     use_normals: true
-  _8:
+  08_KZAF1075NA4WA55GA20AA0:
     name: Drive shaft
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -69,7 +69,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.03]
     speed_slow: 0.1
     use_normals: true
-  _9:
+  09_EDCS10:
     name: End cap for shaft
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
@@ -79,7 +79,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _10:
+  10_CLBPS10_17_4:
     name: Bearing spacers for inner ring
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
@@ -89,7 +89,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _11:
+  11_MBRAC60-2-10:
     name: Pully for round belts clamping
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -99,7 +99,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 0.04
     use_normals: true
-  _12:
+  12_CLBUS6-9-9.5:
     name: Bearing spacer for inner ring
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -109,7 +109,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 0.04
     use_normals: false
-  _13:
+  13_MBGA30-2:
     name: Idler for round belt
     robot_name: b_bot
     camera_name: a_phoxi_m_camera
@@ -119,7 +119,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 0.04
     use_normals: true
-  _14:
+  14_BGPSL6-9-L30-F8:
     name: Bearing shaft screw
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
@@ -129,7 +129,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _15:
+  15_SLBNR6:
     name: M6 hex nut
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
@@ -139,7 +139,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _16:
+  16_SPWF6:
     name: M6 flat washer
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
@@ -149,7 +149,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _17:
+  17_SCB4-10:
     name: M4 head cap screw
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
@@ -159,7 +159,7 @@ part_props:
     place_offset: [0.0, 0.0, 0.05]
     speed_slow: 1.0
     use_normals: false
-  _18:
+  18_SCB3-10:
     name: M3 head cap screw
     robot_name: a_bot
     camera_name: a_phoxi_m_camera
