--- a/aist_routines/config/toyota1_config.yaml
+++ b/aist_routines/config/toyota1_config.yaml
@@ -1,18 +1,18 @@
 robots:
   arm:
-    default_gripper: gripper
+    default_gripper: magnet
 
 grippers:
   magnet:
     type: MagswitchGripper
     args:
       prefix: ''
-      timeout: 10.0
+      timeout: 5.0
   gripper:
     type: Lecp6Gripper
     args:
       prefix: ''
-      timeout: 10.0
+      timeout: 5.0
 
 cameras:
   camera: PhoXiCamera
