--- a/aist_routines/config/aist_config.yaml
+++ b/aist_routines/config/aist_config.yaml
@@ -1,18 +1,18 @@
 robots:
-#  a_bot:
-#    default_gripper: a_bot_robotiq_85_gripper
+  a_bot:
+    default_gripper: a_bot_robotiq_85_gripper
   b_bot:
     default_gripper: b_bot_single_suction_gripper
     
 grippers:
-#  a_bot_robotiq_85_gripper:
-#    type: RobotiqGripper
-#    args:
-#      prefix: a_bot_
-#      product: robotiq_85
-#      force: 5.0
-#      velocity: 0.1
-#      timeout: 6.0
+  a_bot_robotiq_85_gripper:
+    type: RobotiqGripper
+    args:
+      prefix: a_bot_
+      product: robotiq_85
+      force: 5.0
+      velocity: 0.1
+      timeout: 6.0
   b_bot_single_suction_gripper:
     type: SuctionGripper
     args:
