--- a/aist_handeye_calibration/config/mocap/realsenseD435.yaml
+++ b/aist_handeye_calibration/config/mocap/realsenseD435.yaml
@@ -5,22 +5,29 @@ eye_on_hand: false
 robot_base_frame: workspace_center
 robot_effector_frame: c_bot_ee_link
 camera_frame: calibrated_realsenseD435_color_optical_frame
-marker_id: 26
-marker_size: 0.07
-planarity_tolerance: 0.008
-initpose: [0.00, 0.05, 0.30, -90, 90, 0]
+marker_id: 32
+marker_size: 0.16
+planarity_tolerance: 0.01
+initpose: [0.00, 0.07, 0.50, -90, 90, 0]
 keyposes:
-  - [-0.15,  0.20, 0.25, 30, 30, 90]
-  - [-0.15,  0.10, 0.25, 30, 30, 90]
-#  - [-0.15,  0.00, 0.25, 30, 30, 90]
+  - [-0.10,  0.15, 0.30, 30, 30, 90]
+  - [-0.10,  0.10, 0.15, 30, 30, 90]
 
-  - [0.00,  0.20, 0.25, 30, 30, 90]
-  - [0.00,  0.10, 0.25, 30, 30, 90]
-#  - [0.00,  0.00, 0.25, 30, 30, 90]
+  - [0.05,   0.0, 0.05, 30, 30, 90]
+  - [0.00,  0.10, 0.30, 30, 30, 90]
 
-#  - [0.15,  0.20, 0.25, 30, 30, 90]
-  - [0.15,  0.10, 0.25, 30, 30, 90]
-#  - [0.15,  0.00, 0.25, 30, 30, 90]
+  - [0.10,  0.15, 0.15, 30, 30, 90]
+  - [0.10,  0.00, 0.30, 30, 30, 90]
 
 camera_body_frame: realsenseD435_link
 camera_optical_frame: realsenseD435_color_optical_frame
+
+
+
+# code .ros/aist_handeye_calibration/realsenseD435.yaml
+# eye_on_hand: false
+# parent: workspace_center
+# child: calibrated_realsenseD435_color_optical_frame
+# transform: {x: -0.007246830067568003, y: 0.7569737959974279, z: 0.4969053662449773, qx: -0.02040936309453232, qy: 0.843216014011098, qz: -0.5366985963778543, qw: 0.02290913048005611}
+# calibration_date: Wed Dec  2 13:24:04 2020
+
