--- a/aist_routines/config/kitting.yaml
+++ b/aist_routines/config/kitting.yaml
@@ -212,134 +212,149 @@ graspability_parameters:
     ns: 2
     detect_edge: true
     object_size: 15
+    min_distance: 30
     radius: 8
     open_width: 100
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 10
+    insertion_depth: 0.020
   05_MBRFA30-2-P6:
     ns: 2
     detect_edge: true
     object_size: 8
+    min_distance: 30
     radius: 6
     open_width: 45
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 3
+    insertion_depth: 0.003
   06_MBT4-400:
     ns: 2
     detect_edge: true
     object_size: 2
+    min_distance: 30
     radius: 2
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 5
+    insertion_depth: 0.005
   07_SBARB6200ZZ_30:
     ns: 2
     detect_edge: true
     object_size: 12
+    min_distance: 30
     radius: 12
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 5
+    insertion_depth: 0.005
   08_KZAF1075NA4WA55GA20AA0:
     ns: 0
     detect_edge: false
     object_size: 4
+    min_distance: 30
     radius: 2
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 4
+    insertion_depth: 0.004
   09_EDCS10:
     ns: 2
     detect_edge: true
     object_size: 3
+    min_distance: 30
     radius: 3
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   10_CLBPS10_17_4:
     ns: 2
     detect_edge: true
     object_size: 3
+    min_distance: 30
     radius: 3
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   11_MBRAC60-2-10:
     ns: 2
     detect_edge: true
     object_size: 12
+    min_distance: 30
     radius: 12
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   12_CLBUS6-9-9.5:
     ns: 2
     detect_edge: true
     object_size: 4
+    min_distance: 30
     radius: 2
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   13_MBGA30-2:
     ns: 2
     detect_edge: true
     object_size: 7
+    min_distance: 30
     radius: 2
     open_width: 30
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   14_BGPSL6-9-L30-F8:
     ns: 0
     detect_edge: true
     object_size: 4
+    min_distance: 30
     radius: 2
     open_width: 14
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 5
+    insertion_depth: 0.005
   15_SLBNR6:
     ns: 2
     detect_edge: true
     object_size: 3
+    min_distance: 30
     radius: 3
     open_width: 20
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   16_SPWF6:
     ns: 0
     detect_edge: true
     object_size: 3
+    min_distance: 30
     radius: 3
     open_width: 15
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   17_SCB4-10:
     ns: 0
     detect_edge: true
     object_size: 1
+    min_distance: 30
     radius: 1
     open_width: 10
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
   18_SCB3-10:
     ns: 0
     detect_edge: true
     object_size: 1
+    min_distance: 30
     radius: 1
     open_width: 10
     finger_width: 1
     finger_thickness: 5
-    insertion_depth: 1
+    insertion_depth: 0.001
